# WebRTC-Media-Sender-Receiver

./: CMakeLists.txt  README.md  WebRTC-Media-Sender-Receiver.code-workspace  gstreamer.txt
src/rtc_receiver/: CMakeLists.txt  helpers.hpp  main.cpp
src/rtc_sender/: CMakeLists.txt  helpers.hpp  main.cpp
src/signaling-server-python-arch/: singnaling.py
src/signaling-server-python-ubuntu/: singnaling.py
